--- a/rootdir/etc/init.mt6765.rc
+++ b/rootdir/etc/init.mt6765.rc
@@ -140,3 +140,7 @@ on property:sys.boot_completed=1
     stop boot_log
     stop boot_log_crash
     stop boot_log_kernel 
+
+on boot
+    # DT2W
+    write /proc/gesture/onoff 1
