--- a/rootdir/etc/init.mt6765.rc
+++ b/rootdir/etc/init.mt6765.rc
@@ -49,17 +49,11 @@ on charger
 
     write /sys/power/pm_async 0
 
-on property:persist.sys.garden.dt2w=0 && property:ro.boot.hwname=dandelion
+on property:persist.sys.dandelion.dt2w=0
     exec /system/bin/sendevent /dev/input/event3 0 1 4
 
-on property:persist.sys.garden.dt2w=1 && property:ro.boot.hwname=dandelion
+on property:persist.sys.dandelion.dt2w=1
     exec /system/bin/sendevent /dev/input/event3 0 1 5
-
-on property:persist.sys.garden.dt2w=0 && property:ro.boot.hwname=angelica
-    exec /system/bin/sendevent /dev/input/event4 0 1 4
-
-on property:persist.sys.garden.dt2w=1 && property:ro.boot.hwname=angelica
-    exec /system/bin/sendevent /dev/input/event4 0 1 5
 
 on post-fs
     # Disable OEM Lights
@@ -109,44 +103,3 @@ on property:sys.boot_completed=1
     write /sys/devices/system/cpu/cpufreq/performance/max_freq_hysteresis 1
     write /dev/cpuset/top-app/cpus 0-7
     write /sys/module/lazyplug/parameters/nr_possible_cores 8
-
-# Logcat Services
-service boot_log /system/bin/logcat -b all -D -f /cache/boot_log_full.txt
-    class main
-    user root
-    group root system
-    disabled
-    oneshot
-
-service boot_log_crash /system/bin/logcat -b crash -D -f /cache/boot_log_crash.txt
-    class main
-    user root
-    group root system
-    disabled
-    oneshot
-
-service boot_log_kernel /system/bin/logcat -b kernel -D -f /cache/boot_log_kernel.txt
-    class main
-    user root
-    group root system
-    disabled
-    oneshot
-
-on post-fs-data
-# Clear existing log and start the service
-    rm /cache/boot_log_full.txt
-    rm /cache/boot_log_crash.txt
-    rm /cache/boot_log_kernel.txt
-    start boot_log
-    start boot_log_crash
-    start boot_log_kernel
-
-on property:sys.boot_completed=1
-# Stop the logger service
-    stop boot_log
-    stop boot_log_crash
-    stop boot_log_kernel 
-
-on boot
-    # DT2W
-    write /proc/gesture/onoff 1
